pkg/lang/testdata/ub/calls/invalid/bare-call-optional-default.ub
inputs: { a: { type: integer, default: pick() } }
